Adding User Activation functionality
