# go_social/docs/swagger.yaml
@@ -8,6 +8,23 @@ definitions:
     required:
     - follower_id
     type: object
+  main.RegisterPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 3
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
   main.createPostPayload:
     description: Creates a post
     properties:
@@ -104,6 +121,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -120,6 +139,38 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /authentication/user:
+    post:
+      consumes:
+      - application/json
+      description: Creates a user account and invitation token
+      parameters:
+      - description: User registration payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Register a user
+      tags:
+      - auth
   /health:
     get:
       description: Returns service status, environment, and version.
@@ -363,6 +414,29 @@ paths:
         "204":
           description: No Content
       summary: Unfollow user
+      tags:
+      - users
+  /users/activate/{token}:
+    post:
+      description: Activates a user using an invitation token
+      parameters:
+      - description: Invitation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Activate user
       tags:
       - users
   /users/feed:
